# django-htmx-todo

./: .env.sample  Makefile  README.md  docker-compose.yml
app/: .flake8  Dockerfile  manage.py  mypy.ini  pyproject.toml
app/tasker/: settings.py
app/tasker/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
app/tasker/tasks/migrations/: 0001_initial.py
app/tasker/tasks/templates/: list.html
app/tasker/tasks/templates/tasks/: tasklist_create_form.html  tasklist_detail.html  tasklist_filter.html  tasklist_form.html  tasklist_items.html  tasklist_list.html  tasklist_tasks.html
app/todo/: settings.py  urls.py  wsgi.py
app/todo/templates/: base.html
app/todo/todos/: admin.py  forms.py  models.py  urls.py  views.py
app/todo/todos/migrations/: 0001_initial.py
app/todo/todos/templates/: create.html  detail.html  list.html
