[tool.poetry]
name = "django-htmx-todo"
version = "0.1.0"
description = ""
authors = ["Jared Lockhart"]
license = "Creative Commons 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
django-stubs = "^1.7.0"
mypy = "^0.790"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
